<resources>
    <string name="app_name">FooballQuizApp</string>
    <string name="goat_logo">GOAT LOGO</string>
    <string name="lm10">LM10</string>
    <string name="cr7">CR7</string>
    <string name="welcome_to_the_g_o_a_t_debate">Finishing the G.O.A.T debate</string>
    <string name="question_will_be_here">QUESTION WILL BE HERE</string>
    <string name="score">SCORE</string>
    <string name="_7_7">7/7</string>
</resources>